swagger now working
