# vet-health-golang/router/router.go
@@ -5,11 +5,25 @@ import (
 
 	"github.com/gin-gonic/gin"
 
+	_ "vet-health-golang/docs"
+
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
+	// "vet-health-golang/docs" // docs is generated by Swag CLI, you have to import it.
 )
 
+// @title           Swagger Example API
+// @version         2.0
+// @description     This is a sample server celler server.
+// @termsOfService  http://swagger.io/terms/
+
+// @license.name  Apache 2.0
+// @license.url   http://www.apache.org/licenses/LICENSE-2.0.html
+
+// @host      localhost:8080
+// @BasePath  /api/v1
 func InitRouter() {
+
 	router := gin.Default()
 
 	router.Use(gin.Logger())
